# oodaloop-data-science

./: .gitignore  README.md  pyproject.toml
src/oodaloop_ds/: cli.py
src/oodaloop_ds/templates/: databricks.env
src/oodaloop_ds/templates/.cursor/rules/: AnalysisPlanner.mdc  BehavioralModifications.mdc  KnowledgeBase.mdc  Personality.mdc  PracticalModifications.mdc  PrimaryWorkflow.mdc  SQL_Rules.mdc  Workflow.mdc
src/oodaloop_ds/templates/docs/: analysis_brief.md  analysis_plan.md
src/oodaloop_ds/templates/notebooks/: exploration.ipynb.txt
